Style fixes So rotating album is visible on compare albums page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,4 +16,7 @@ body {
   padding: 0px;
 
   background-color: rgb(39, 39, 39);
+  background-image: url("/assets/images/Wood.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
